--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculadora en JavaScript</title>
     <meta name="description" content="Calculadora en JavaScript para mentoria">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module" src="./js/Paises.js" defer async></script>
+    <script type="module" src="./app.js"></script>
 </head>
 
 <body>
