Agregando funciones para validar la respuesta hechas por el jugador

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Calculadora en JavaScript</title>
+    <title>Juego de preguntas</title>
     <meta name="description" content="Calculadora en JavaScript para mentoria">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module" src="./app.js"></script>
+    <link rel="stylesheet" href="./css/myStyle.css">
+    <script type="module" src="./controller/ctrApp.js"></script>
 </head>
 
 <body>
