--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="./controller/ctrApp.js"></script>
 </head>
 
-<body>
+<body class="body">
     <div id="container"></div>
 </body>
 
